# sample-mediastreamer

./: LICENSE  README.md
applications/: CMakeLists.txt  Info.plist  conanfile.txt
applications/include/: CMakeLists.txt
applications/include/Overlay/: CMakeLists.txt  IOverlayRepository.hpp  Overlay.hpp  OverlayRepository.hpp
applications/include/ReceiverApp/: CMakeLists.txt  ReceiverApp.hpp
applications/include/RegistrarApp/: CMakeLists.txt  RegistrarApp.hpp
applications/include/SenderApp/: CMakeLists.txt  SenderApp.hpp
applications/include/framework/media/: CMakeLists.txt
applications/include/framework/media/MediaStreamer/: CMakeLists.txt  MediaStreamer.hpp
applications/src/: CMakeLists.txt  receiver.cpp  registrar.cpp  sender.cpp
applications/src/Overlay/: CMakeLists.txt  Overlay.cpp  OverlayRepository.cpp
applications/src/ReceiverApp/: CMakeLists.txt  ReceiverApp.cpp
applications/src/RegistrarApp/: CMakeLists.txt  RegistrarApp.cpp
applications/src/SenderApp/: CMakeLists.txt  SenderApp.cpp
applications/src/framework/media/MediaStreamer/: CMakeLists.txt  MediaStreamer.cpp
database/: dbconfig.yml
database/db/migrations/: 20200820083659-create_table_users.sql
database/scripts/: docker-run.sh  init.sh  init.sql
server/: .gitignore  build.sbt
server/src/main/scala/: App.scala  log4j.properties
server/src/main/scala/framework/database/: RepositoryBase.scala
server/src/main/scala/framework/network/: Routes.scala
server/src/main/scala/overlay/: IOverlayRepository.scala  Overlay.scala  OverlayRepository.scala  OverlayUsecase.scala
